--- a/app/sass/sections/_header.scss
+++ b/app/sass/sections/_header.scss
@@ -1,89 +1,4 @@
-header {
-	nav {
-		position: relative;
-		width: 100%;
-		padding-top: 15px;
-		display: inline-block;
-		text-align: center;
-		color: $links;
-
-		.sub-menu {
-			width: 100%;
-			display: flex;
-		}
-		
-		.main-menu {
-			display: none;
-		}
-
-		.main-menu,
-		.sub-menu {
-			li {
-				&.active {
-					a {
-						color: $secundary;
-						font-weight: 400;
-					}
-				}
-				&:hover {
-					a {
-						color: $linkshover;
-						font-weight: 400;
-					}
-				}			
-			}
-		}
-	}
-}
-
-@include breakpoint($tablet) {
-	header {
-		width: 100%;
-		@include max-width;
-		margin-top: 30px;
-
-		nav {
-			position: static;
-			width: auto;
-			padding: 0;
-			display: block;
-			text-align: left;
-			float: right;
-
-			.main-menu-prefix {
-				display: inline-block;
-				margin-bottom: 0;
-				margin-top: 7px;
-			}
-
-			a {
-				font-size: 1.2rem !important;
-				margin-right: 30px;
-			}
-			
-			.sub-menu {
-				display: inline-block;
-				width: auto;
-				border-bottom: none;
-				margin-top: 7px;
-
-				li {
-					display: inline-block;
-					// margin-bottom: 1rem;
-
-					&.active {
-						a {
-							border-bottom: 1px solid $secundary;
-						}
-					}
-
-					&:last-child {
-						a {
-							margin-right: 10px;
-						}
-					}
-				}
-			}
-		}
+.header {
+	.nav {
 	}
 }
