--- a/app/sass/stylesheet.scss
+++ b/app/sass/stylesheet.scss
@@ -7,6 +7,6 @@
 
 @import "variables/**/*.scss";
 @import "mixins/**/*.scss";
-@import "reset/**/*.scss";
+@import "base/**/*.scss";
 @import "sections/**/*.scss";
 @import "elements/**/*.scss";
