--- a/app/sass/sections/_body.scss
+++ b/app/sass/sections/_body.scss
@@ -1,16 +1,3 @@
-body {
-	margin-left: auto;
-	margin-right: auto;
+.body {
 
-	margin-top: calc(#{$gutter} / 2);
-	margin-bottom: 20px;
-	width: 100%;
-}
-
-@include breakpoint($tablet) {
-	body {
-		margin-top: 0;
-		padding-left: 15px;
-		padding-right: 15px;
-	}
 }
