--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -1,13 +1,10 @@
-$primary: black;
-$secundary: #ff6825;
+$primary: #48bd9b;
+$secundary: #252525;
 
 $white: white;
-$black: #252525;
-$grey: #afafaf;
-$grey-light: #f1f1f1;
-
-$links: #777777;
-$linkshover: #444;
+$black: $secundary;
+$grey: #333333;
+$grey-light: #fafafa;
 
 $border: 1px solid $grey;
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
