--- a/app/sass/variables/_grid.scss
+++ b/app/sass/variables/_grid.scss
@@ -1,31 +1,15 @@
 @include sgs-change('mobile first', true);
 
 /* Sizes */
-$mobile: 357px;
-$tablet: 768px;
-$desktop: 1280px;
+$desktop: 720px;
 
-$max-width: 900px;
-
-$fontpadding: 1rem;
-$gutter: 40px;
+$max-width: 960px;
+$gutter: 30px;
 $padding: 5px;
-
-//mobile
-$column-count-mob: 2;
-$column-gap-mob: 15px;
-
-//tablet
-$column-count-tablet: 3;
-$column-gap-tablet: 30px;
-
-//desktop
-$column-count: 4;
-$column-gap: 30px;
 
 /* Grids */
 @include add-grid(24);
-
+@include add-grid(37 at $desktop);
 
 /* Gutters */
 @include add-gutter(0);
