--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -6,6 +6,8 @@ $black: $secundary;
 $grey: #333333;
 $grey-light: #fafafa;
 
+$placeholder: #d0d0d0;
+
 $border: 1px solid $grey;
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
