--- a/app/sass/elements/form/_overtake.scss
+++ b/app/sass/elements/form/_overtake.scss
@@ -1,16 +1,52 @@
 .overtake {
-	background-color: rgba($primary, .7);
 	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	transition: opacity .5s linear;
+	height: 50px;
+	width: 50px;
+	top: calc(50% - 25px);
+	left: calc(50% - 25px);
 	opacity: 0;
+	transition: all $speed linear;
 	z-index: -1;
+	pointer-events: none;
+
+	&:after {
+		content: '';
+		width:100vw;
+		height: 100vh;
+		background-color: rgba($primary, .7);
+		position: fixed;
+		top: 0;
+		z-index: -1;
+		left: 0;
+	}
 
 	&.visible {
-		z-index: 10;
+		z-index: 20;
 		opacity: 1;
+	}
+
+	.spinner {
+	  	position: absolute;
+	    width: 50px;
+	    height: 50px;
+	    margin: 0 auto;
+	  	animation: rotation 2s linear infinite;
+
+		.bubble-1,
+		.bubble-2 {
+		    position: absolute;
+		    top: 0;
+		    width: 25px;
+		    height: 25px;
+		    border-radius: 100%;
+		    background-color: $secundary;
+		    animation: scale 2s ease-in-out infinite;
+			
+			&:not(.bubble-1){
+			    top: auto;
+			    bottom: 0;
+			    animation-delay: -1.0s;
+			}
+		}
 	}
 }
