--- a/app/sass/sections/_footer.scss
+++ b/app/sass/sections/_footer.scss
@@ -1,3 +1,21 @@
 .footer {
-	
+	max-width: $max-width;
+	width: 100%;
+    margin: 0 auto;
+    position: relative;
+
+    * {
+    	color: $white;
+    }
+
+	&:before {
+		content: '';
+		position: absolute;
+		width: 150vw;
+		height: 100%;
+		top: 0;
+		left: -50vw;
+		z-index: -1;
+		background-color: $grey;
+	}
 }
