--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -9,5 +9,6 @@ $grey-light: #fafafa;
 $placeholder: #d0d0d0;
 
 $border: 1px solid $grey;
+$box-shadow: 1px 1px 1px black;
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
