--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -1,5 +1,5 @@
-$primary: #48bd9b;
-$secundary: #252525;
+$primary: #1abc9c;
+$secundary: #242424;
 
 $white: white;
 $black: $secundary;
@@ -9,6 +9,6 @@ $grey-light: #fafafa;
 $placeholder: #d0d0d0;
 
 $border: 1px solid $grey;
-$box-shadow: 1px 1px 1px black;
+$box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
