--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -27,6 +27,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	box-sizing: border-box;
 	text-size-adjust: none;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 .owl-stage {
