--- a/app/sass/elements/blocks/_block.video.scss
+++ b/app/sass/elements/blocks/_block.video.scss
@@ -1,22 +1,9 @@
 .block.video {
     padding: 0;
-    position: relative;
     width: 100%;
 	height: #{100vw / 16 * 9};
 	max-height: #{$max-width / 16 * 9};
-	margin-top: $gutter;
-	margin-bottom: $gutter;
-
-	&:after {
-		content: '';
-		position: absolute;
-		width: 150vw;
-		height: calc(100% + (#{$gutter} * 2);
-		top: -$gutter;
-		left: -50vw;
-		z-index: -1;
-		background-color: $grey-light;
-	}
+	@include background();
 
     iframe {
 		position: absolute;
