--- a/app/sass/elements/menu/_main-menu.scss
+++ b/app/sass/elements/menu/_main-menu.scss
@@ -1,6 +1,7 @@
 .main-menu {
 
 	.nav {
+		padding-bottom: $gutter * 2;
 		display: flex;
 		height: 100vh;
 		z-index: 10;
@@ -18,6 +19,7 @@
 		.menu-item {
 			width: 100%;
 			text-align: center;
+			@include font('subtitle');
 			
 			.menu-link {
 				width: 100%;
