--- a/app/sass/sections/_header.scss
+++ b/app/sass/sections/_header.scss
@@ -7,7 +7,7 @@
 		@include font('title');
 		position: absolute;
 		font-size: 20px;
-		line-height: 13px;
+		line-height: $padding;
 		left: #{100vw / 24 * 1};
 		top: $padding;
 		color: white;
