--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -6,7 +6,7 @@ $black: $secundary;
 $grey: #333333;
 $grey-light: #fafafa;
 
-$placeholder: #d0d0d0;
+$placeholder: #afafaf;
 
 $border: 1px solid $grey;
 $box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
