--- a/app/sass/elements/blocks/_block.hero.scss
+++ b/app/sass/elements/blocks/_block.hero.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	height: 80vh;
+	height: 100vh;
 	justify-content: flex-end;
 	padding-bottom: $padding * 2;
     position: relative;
@@ -41,12 +41,12 @@
 		z-index: -1;
 		position: absolute;
 		top: 0;
-		height: 80vh;
+		height: 100vh;
 		
 		.hero-image {
 			position: relative;
 			width: 100%;
-			height: 80vh;
+			height: 100vh;
 			display: block;
 
 			&:after {
@@ -73,6 +73,7 @@
 
 @include breakpoint($desktop) {
 	.block.hero {
+		justify-content: center;
 
 
 		.introduction {
@@ -87,7 +88,7 @@
 					position: absolute;
 					width: 100%;
 					display: block;
-					transform: translateY(-25%);
+					transform: translateY(0);
 				}
 			}
 		}
