--- a/app/sass/elements/blocks/_block.scss
+++ b/app/sass/elements/blocks/_block.scss
@@ -7,5 +7,26 @@ main > .block {
 		@include font('textheader');
 		display: block;
 	}
+
+	ul {
+		li {
+			margin-left: 12px;
+			position: relative;
+			
+			&:before {
+				content: "- ";
+				position: absolute;
+				left: -14px;
+			}
+		}
+	}
+
+	p {
+		margin-bottom: 20px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
 }
 
