--- a/app/sass/elements/blocks/_block.hero.scss
+++ b/app/sass/elements/blocks/_block.hero.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	height: 100vh;
+	height: calc(100vh - 80px);
 	justify-content: flex-end;
 	padding-bottom: $padding * 2;
     position: relative;
@@ -41,12 +41,12 @@
 		z-index: -1;
 		position: absolute;
 		top: 0;
-		height: 100vh;
+		height: calc(100vh - 80px);
 		
 		.hero-image {
 			position: relative;
 			width: 100%;
-			height: 100vh;
+			height: calc(100vh - 80px);
 			display: block;
 
 			&:after {
