--- a/app/sass/elements/blocks/_block.testimonials.scss
+++ b/app/sass/elements/blocks/_block.testimonials.scss
@@ -8,7 +8,8 @@
 			color: $primary;
 			text-align: center;
 			position: absolute;
-			font-size: 4rem;
+			font-size: 4.5rem;
+			letter-spacing: 1rem;
 			width: 30px;
 			line-height: 0;
 			font-weight: 800;
@@ -25,7 +26,7 @@
 
 		&:after {
 			content: "”";
-			bottom: 1rem;
+			bottom: 2rem;
 			right: -10px;
 		}
 	}
@@ -35,11 +36,10 @@
 	}
 
 	.name {
-		margin-top: $padding;
+		margin: $padding 0;
 		font-weight: bold;
 		font-size: 1.125rem;
 		text-align: right;
-		margin-bottom: 30px;
 	}
 }
 
