--- a/app/sass/elements/blocks/_block.video.scss
+++ b/app/sass/elements/blocks/_block.video.scss
@@ -1,16 +1,20 @@
 .block.video {
-    padding: 0;
-    width: 100%;
-	height: #{100vw / 16 * 9};
-	max-height: #{$max-width / 16 * 9};
 	@include background();
 
-    iframe {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100vw;
+	.inner {
+	    padding: 0;
+	    width: 100%;
 		height: #{100vw / 16 * 9};
 		max-height: #{$max-width / 16 * 9};
-    }
+		
+	    iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: #{100vw / 16 * 9};
+			max-height: #{$max-width / 16 * 9};
+	    }
+	}
+
 }
