--- a/app/sass/elements/testimonials/_owl-carousel-overrides.scss
+++ b/app/sass/elements/testimonials/_owl-carousel-overrides.scss
@@ -9,21 +9,50 @@
 	position: relative;
 
 	.owl-dots {
-		position: absolute;
-		width: #{100vw / 24 * 20};
-		margin-left: #{100vw / 24 * 1};
+		position: relative;
+		width: #{100vw / 24 * 18};
+		margin-left: #{100vw / 24 * 2};
 		z-index: 50;
 	    counter-reset: increment;
+	    bottom: -$padding/1.5;
+	    white-space: nowrap;
+		z-index: -1;
+
+
+	    &:before {
+	    	content: '';
+	    	left: #{100vw / 24 * -4};
+	    	width: #{100vw / 24 * 4};
+	    	height: $gutter;
+	    	background-color: $grey-light;
+	    	position: absolute;
+	    	z-index: 1;
+	    }
+	    &:after {
+	    	content: '';
+	    	z-index: 1;
+	    	right: #{100vw / 24 * -4};
+	    	width: #{100vw / 24 * 4};
+	    	height: $gutter;
+	    	background-color: $grey-light;
+	    	position: absolute;
+	    }
 
 		.owl-dot {
+			width: #{100vw / 24 * 1.8};
+			transition: all $speed $easing-cubic;
+
 			&:before {
 				counter-increment: increment;
 				content: counter(increment);
 				color: $secundary;
+				font-weight: 600;
 				padding: 5px;
-				opacity: .4;
-				
-
+				opacity: .2;
+			}
+			
+			span {
+				display: none;
 			}
 			
 			&.active {
@@ -32,9 +61,6 @@
 				}
 			}
 
-			span {
-				display: none;
-			}
 		}
 
 	}
@@ -42,8 +68,13 @@
 	.owl-next {
 		fill: $primary;
 		position: absolute;
-		bottom:  $gutter;
+		bottom:  -$gutter;
 		width: 30px;
+
+		&:focus,
+		&:hover {
+			background: none !important;
+		}
 	}
 	
 	.owl-prev {
@@ -52,5 +83,14 @@
 
 	.owl-next {
 		right: 0;
+	}
+}
+
+@for $i from 1 through 6 {
+
+	[data-item="#{$i}"] {
+	    .owl-dot {
+			transform: translateX( #{100vw / 24 * (18 * $i) * -1});
+	    }
 	}
 }
