--- a/app/sass/stylesheet.scss
+++ b/app/sass/stylesheet.scss
@@ -8,5 +8,6 @@
 @import "variables/**/*.scss";
 @import "mixins/**/*.scss";
 @import "base/**/*.scss";
+@import "pages/**/*.scss";
 @import "sections/**/*.scss";
 @import "elements/**/*.scss";
