--- a/app/sass/variables/_colors.scss
+++ b/app/sass/variables/_colors.scss
@@ -12,3 +12,4 @@ $border: 1px solid $grey;
 $box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
+$text-shadow:  0 1px 4px rgba(0, 0, 0, 0.5);
