--- a/app/sass/elements/form/_form.scss
+++ b/app/sass/elements/form/_form.scss
@@ -1,5 +1,5 @@
 .contactform {
-	min-height: calc(100vh - 80px);
+	min-height: calc(100vh - #{$offset});
 	
 	input, textarea, label {
 		width: 100%;
