--- a/app/sass/elements/blocks/_block.video.scss
+++ b/app/sass/elements/blocks/_block.video.scss
@@ -4,15 +4,15 @@
 	.inner {
 	    padding: 0;
 	    width: 100%;
-		height: #{100vw / 16 * 9};
+		height: calc( (100vw /  24 * 22) / 16 * 9);
 		max-height: #{$max-width / 16 * 9};
-		
+
 	    iframe {
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 100vw;
-			height: #{100vw / 16 * 9};
+			width: #{100vw / 24 * 22};
+			height: calc( (100vw /  24 * 22) / 16 * 9);
 			max-height: #{$max-width / 16 * 9};
 	    }
 	}
