fixing the max width

--- a/app/sass/elements/blocks/_block.contactform.scss
+++ b/app/sass/elements/blocks/_block.contactform.scss
@@ -1,4 +1,9 @@
 .block.contactform {
-
+	min-height: calc(100vh - #{$offset});
 }
 
+@include breakpoint ($desktop) {
+	.block.contactform {
+		min-height: auto;
+	}
+}
