--- a/app/sass/elements/_button.scss
+++ b/app/sass/elements/_button.scss
@@ -1,7 +1,7 @@
 .button {
 	background-color: $primary;
 	color: $white;
-	border-radius: 10px;
+	border-radius: $border-radius;
 	text-decoration: none;
 	padding: $padding $gutter;
 	display: inline-block;
