--- a/app/sass/elements/blocks/_block.scss
+++ b/app/sass/elements/blocks/_block.scss
@@ -1,6 +1,7 @@
 main > .block {
-	width: #{100vw / 24 * 22};
-	// margin-top: #{100vw / 24 * 22};
+	width: calc(var(--max-width) / 24 * 22);
+	//weet niet of dit goed is hieronder
+    max-width: calc( var(--max-width) - (var(--max-width) / 37 * 2));
 	margin: $gutter*1.5 auto;
 
 	.subtitle {
@@ -31,3 +32,9 @@ main > .block {
 	}
 }
 
+
+@include breakpoint($desktop) {
+	main > .block {
+		width: #{100vw / 37 * 35};
+	}
+}
