fixing styling desktop

--- a/app/sass/elements/blocks/_block.contactform.scss
+++ b/app/sass/elements/blocks/_block.contactform.scss
@@ -1,5 +1,9 @@
 .block.contactform {
 	min-height: calc(100vh - #{$offset});
+
+	.picture {
+		display: none;
+	}
 }
 
 @include breakpoint ($desktop) {
