--- a/app/sass/elements/blocks/_block.counter.scss
+++ b/app/sass/elements/blocks/_block.counter.scss
@@ -15,3 +15,16 @@
 		}
 	}
 }
+
+@include breakpoint($desktop) {
+	.block.counter {
+		> div {
+			font-size: 1.5rem;
+			.counter {
+				font-weight: light;
+				font-size: 2.5rem;
+			}
+		}
+
+	}
+}
