--- a/app/sass/elements/blocks/_block.references.scss
+++ b/app/sass/elements/blocks/_block.references.scss
@@ -38,7 +38,6 @@
 				bottom: $padding;
 				font-weight: 600;
 			}
-			
 		}
 
 		.reference-image {
@@ -55,3 +54,5 @@
 
 	}
 }
+
+// responsive are (front) -page dependant.
