--- a/app/sass/elements/blocks/_block.usp.scss
+++ b/app/sass/elements/blocks/_block.usp.scss
@@ -4,7 +4,6 @@
 		display: flex;
 		flex-direction: column;
 
-
 		.subtitle {
 			padding: $padding 0;
 		}
@@ -15,4 +14,41 @@
 		}
 	}
 
+}
+@include breakpoint($desktop) {
+	.block.usps {
+		.usp {
+			flex-direction: row;
+			justify-content: space-between;
+			text-align: left;
+			margin-bottom: $gutter;
+
+			&:nth-child(even) {
+				.picture {
+					order: 2;
+				}
+			}
+
+			.article {
+				flex: 0 0 calc(var(--max-width) / 37 * 17);
+				padding: calc(var(--max-width) / 37 * 1);
+
+				.subtitle {
+					padding-top: 0;
+				}
+			}
+
+			.picture {
+				flex: 0 0 calc(var(--max-width) / 37 * 17);
+				position: relative;
+				
+				.img {
+					height: 100%;
+					width: auto;
+					position: absolute;
+					display: block;
+				}
+			}		
+		}
+	}
 }
