--- a/app/sass/sections/_header.scss
+++ b/app/sass/sections/_header.scss
@@ -13,3 +13,13 @@
 		color: white;
     }
 }
+
+@include breakpoint ($desktop) {
+	.header {
+		margin-top: $gutter;
+
+		.logo {
+			font-size: 1.5rem;
+		}
+	}
+}
