--- a/app/sass/variables/_grid.scss
+++ b/app/sass/variables/_grid.scss
@@ -1,8 +1,7 @@
 @include sgs-change('mobile first', true);
 
 /* Sizes */
-$desktop: 600px;
-
+$desktop: 770px;
 
 $gutter: 25px;
 $padding: 1rem;
@@ -16,8 +15,8 @@ $offset: 50px;
 
 
 :root {--max-width: 100vw;}
-@media only screen and (min-width: 960px) {
-  :root { --max-width: 960px !important;}
+@media only screen and (min-width: $desktop) {
+  :root { --max-width: $desktop !important;}
 }
 
 $max-width: var(--max-width);
