--- a/app/sass/elements/blocks/_block.references.scss
+++ b/app/sass/elements/blocks/_block.references.scss
@@ -14,6 +14,12 @@
 		}
 
 		.introduction {
+			position: absolute;
+			z-index: 500;
+			left: 0%;
+			height: 170px;
+			width: 100%;
+			
 			.title {
 				@include font('title');
 				text-shadow: $text-shadow;
@@ -42,13 +48,6 @@
 
 		.reference-image {
 			.img {
-				position: absolute;
-				z-index: -1;
-				width: 100%;
-				left: 0;
-				top: 0;
-				min-height: 100%;
-				height: auto;
 			}
 		}
 
