--- a/app/sass/pages/_page.scss
+++ b/app/sass/pages/_page.scss
@@ -10,7 +10,7 @@
 @include breakpoint($desktop) {
 	.page {
 		.block {
-
+			// reference block
 			&.references {
 				display: flex;
 				flex-direction: row;
@@ -19,6 +19,13 @@
 				.subtitle {
 					position: absolute;
 					left: 0;
+				}
+
+				.reference-image {
+					height: 100%;
+					min-height: 350px;
+					// width: calc(var(--max-width) / 24 * 17);
+					// height: 500px;
 				}
 
 				.reference {
@@ -36,7 +43,7 @@
 					}
 				}
 			}
-			
+			// contactform
 			&.contactform {
 				display: flex;
 				justify-content: space-between;
@@ -51,10 +58,9 @@
 					height: 100%;
 					
 					.img {
-						height: 100%;
+
 					}
 				}
-
 			}
 		}
 	}
