ported to jekyll

--- a/app/_sass/elements/menu/_menu-toggle.scss
+++ b/app/_sass/elements/menu/_menu-toggle.scss
@@ -50,6 +50,15 @@
 	}
 }
 
+// open menu
+.menu-toggle.active {
+	~ .nav {
+		pointer-events: all;
+		opacity: 1;
+		background-color: $white;
+	}
+}
+
 @include breakpoint ($desktop) {
 	.main-menu {
 		.menu-toggle {
