making other page

--- a/app/_includes/_blocks/video.html
+++ b/app/_includes/_blocks/video.html
@@ -1,5 +1,5 @@
 <section class="block video">
 	<div class="inner">
-		<iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/sQZcXToH1CU?vq=hd720&modestbranding=1&showinfo=0&controls=0&autoplay=0&rel=0&theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<iframe class="iframe" width="100%" height="100%" src="{{page.videourl}}?vq=hd720&modestbranding=1&showinfo=0&controls=0&autoplay=0&rel=0&theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
 </section>
